--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/topus009/csssr.git"
+  },
   "homepage": "https://topus009.github.io/csssr",
   "scripts": {
     "start": "react-scripts start",
